# OpenGL-Platformer

./: CMakeLists.txt  README.md  main.cpp  test.rar
include/: glad.c
include/glad/: glad.h
include/glm/: CMakeCache.txt  Makefile  cmake_install.cmake
